--- a/info/docs.texi
+++ b/info/docs.texi
@@ -18722,9 +18722,9 @@ use from other modules.
 @format
 Toggle voice lock mode.
 
-If called interactively, toggle ‘Voice-Lock mode’.  If the prefix
-argument is positive, enable the mode, and if it is zero or
-negative, disable the mode.
+This is a minor mode.  If called interactively, toggle the
+‘Voice-Lock mode’ mode.  If the prefix argument is positive,
+enable the mode, and if it is zero or negative, disable the mode.
 
 If called from Lisp, toggle the mode if ARG is ‘toggle’.  Enable
 the mode if ARG is nil, omitted, or is a positive number.
