docs update for transient

--- a/info/docs.texi
+++ b/info/docs.texi
@@ -9408,7 +9408,7 @@ or http://orgmode.org/
 @subsection Emacspeak-Org Commands
 
 @subsubsection emacspeak-org-capture-link
-@deffn {Command} emacspeak-org-capture-link   
+@deffn {Command} emacspeak-org-capture-link  (&optional open)
 @table @kbd
 @item C-; h
 @kindex C-; h
@@ -9420,8 +9420,12 @@ or http://orgmode.org/
 
 @format
 Capture hyperlink to current context.
-To use this command, first  do ‘customize-variable’ ‘org-capture-template’
-and assign  letter ‘h’ to a template that creates the hyperlink on capture.
+To use this command, first do ‘customize-variable’
+‘org-capture-template’ and assign letter ‘h’ to a template that
+creates the hyperlink on capture.  Optional interactive prefix
+arg just opens the file
+
+(fn &optional OPEN)
 @end format
 @end deffn
 
@@ -13574,22 +13578,31 @@ This module speech-enables transient.
 
 @subsection Introduction
 
-Package Transient is similar to package Hydra in the sense that it can
-be used to create a sequence of chained/hierarchical commands that are
-invoked via a sequence of keys. It is used by Magit for dispatching to
-the various Git commands.
-Speech-enabling package Transient results in the various interactive
-commands producing auditory feedback. Transient
-shows an ephemeral window with the currently available commands,
-Emacspeak speech-enables transient--show to speak that content.
+Package Transient is similar to package Hydra in the sense that it
+can be used to create a sequence of chained/hierarchical commands
+that are invoked via a sequence of keys. It is used by Magit for
+dispatching to the various Git commands.  Speech-enabling package
+Transient results in the various interactive commands producing
+auditory feedback. Transient shows an ephemeral window with the
+currently available commands, Emacspeak speech-enables
+transient--show to cache that content so it can be browsed if
+desired.
 
 Finally, this module defines a new minor mode called
 transient-emacspeak  that  enables  interactive browsing of the
 contents displayed temporarily. Note that without this
 functionality, learning complex packages like Magit would be difficult
-because  the list of available commands (potentially very long) gets
-spoken in its entirety by the advice on transient--show.
+because  the list of available commands can be very long.
+@subsection Recommended Customizations
+I use the following customizations via .custom, adjust to taste,
+but use these only after reading the transient info documentations.
+@itemize
+@item  transient-show-popup:  1
+@item transient-enable-popup-navigation t
+@end itemize
 
+this pops up the transient buffer after a short delay  and lets
+you move through the buttons with the    up/down arrows.
 @subsection Browsing Contents Of transient--show
 
 When executing a command defined via Transient --- e.g. command
