--- a/info/docs.texi
+++ b/info/docs.texi
@@ -13597,8 +13597,9 @@ because  the list of available commands can be very long.
 I use the following customizations via .custom, adjust to taste,
 but use these only after reading the transient info documentations.
 @itemize
-@item  transient-show-popup:  1
-@item transient-enable-popup-navigation t
+@item transient-force-single-column: t
+@item  transient-show-popup:  nil
+@item transient-enable-popup-navigation:  t
 @end itemize
 
 this pops up the transient buffer after a short delay  and lets
