--- a/etc/NEWS
+++ b/etc/NEWS
@@ -40,3 +40,10 @@ Speech-enable the elisp side of Emacs Application Framework
 Emacspeak no longer depends on tapestry.el  which was cloned from the
 ~vm~ package over 20+ years ago.
 Key _C-e M-t_ now runs an equivalent command that does not depend on tapestry.
+
+** Incorporate Awesome RSS
+
+   See _etc/awesome-rsss-fixup.sh_ for setup instructions; this
+   enables discovery of RSS feeds via a collection of updated ~OPML~
+   files from the _awesome-rss_ project on Github.
+   
